[project]
name = "mistlib-python-test"
version = "0.1.0"
description = "Test client for mistlib"
requires-python = ">=3.12"
dependencies = [
    "pygame",
    "python-dotenv>=1.2.1",
    "websocket-client>=1.9.0",
    "PyYAML>=6.0.0",
    "psutil>=7.2.2",
    "memray>=1.19.1; sys_platform != 'win32'",
]

[tool.uv]
managed = true
