[package]
name = "mistlib-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.0", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
bincode = "1.3"
rand = "0.8"
lazy_static = "1.4.0"
tracing = "0.1"
futures-util = "0.3"
sha2 = "0.10"
unsigned-varint = "0.8"
serde_cbor = "0.11"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
web-time = "1.1.0"
