[package]
name = "mistlib-native"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
name = "mistlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
mistlib-core = { path = "../mistlib-core" }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bytes = "1.0"
async-trait = "0.1"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
futures = "0.3"
tokio-native-tls = "0.3.1"
webrtc = "0.11.0"
thiserror = "2.0"
anyhow = "1.0"
bincode = "1.3"
rand = "0.8"
web-time = "1.1.0"
mimalloc = "0.1"
