[package]
name = "mistlib-wasm"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
mistlib-core = { path = "../mistlib-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "MediaStream",
    "MediaStreamTrack",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelType",
    "RtcDataChannelInit",
    "RtcDataChannelEvent",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceServer",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "RtcRtpReceiver",
    "RtcRtpSender",
    "RtcRtpTransceiver",
    "RtcSdpType",
    "RtcSignalingState",
    "RtcTrackEvent",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "Window",
    "console",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    # OPFS (Origin Private File System)
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "FileSystemWritableFileStream",
    "FileSystemSyncAccessHandle",
    "Navigator",
] }
tokio = { version = "1.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-wasm = "0.2"
async-trait = "0.1"
bytes = "1.0"
bincode = "1.3"
rand = "0.8"
gloo-timers = { version = "0.3", features = ["futures"] }
lazy_static = "1.4"
futures = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1.0"
